src/test/deca/avecObjet/valid/unaire.deca
// Description :
//    Test de l'opérateur unaire '-' appliqué à un float.
//
// Resultats :
// ok

{
    int i = 10;
    float f = 3.14;


    // Test - unaire
    f = - f * (i + 2);

    print(f);
}